Ändrat label och stapelfärg för stapeldiagram samt raderat kursnamn på y-axeln, stylat diagram-containern för olika skärmstorlek samt lagt till ny canvas för cirkeldiagram

--- a/src/diagram.html
+++ b/src/diagram.html
@@ -47,8 +47,9 @@
     <main>
         <h1>Diagram</h1>
 
-        <div class="chart-container">
+        <div class="grid-container-charts">
             <canvas id="myChartBar"></canvas>
+            <canvas id="myChartPie"></canvas>
         </div>
     
     </main>
