Skapat ett cirkeldiagram, ändrat label för stapeldiagram, gömt legend för båda diagram, lagt till en h2 för varje diagram samt stylat diagrammen för responsivitet

--- a/src/diagram.html
+++ b/src/diagram.html
@@ -47,8 +47,10 @@
     <main>
         <h1>Diagram</h1>
 
-        <div class="grid-container-charts">
+        <div class="container-charts">
+            <h2>Mest sökta kurserna vid Mittuniversitetet HT2023</h2>
             <canvas id="myChartBar"></canvas>
+            <h2>Mest sökta programmen vid Mittuniversitet HT2023</h2>
             <canvas id="myChartPie"></canvas>
         </div>
     
