Lagt till en p i sök-containern i map.html för felmeddelanden, stylat hover för knapp, lagt en händelselyssnare på knappen som kör funktionen getInput som i sin tur anropar getData (fetch). showMap anropas som ställer om karta och markör till vald plats.

--- a/src/map.html
+++ b/src/map.html
@@ -54,6 +54,7 @@
         <div class="container-search">
             <input type="text" id="search-input" placeholder=" Sök på en plats">
             <button type="button" id="search-button">Sök</button>
+            <p id="error"></p>
         </div>
         
         <div class="container-map">
